# superfastmatch

./: .buildinfo  .gitignore  CNAME  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  TODO  TODO.md  api.html  architecture.html  changelog.html  developing.html  diary.html  examples.html  genindex.html  index.html  install.html  license.html  objects.inv  pavement.py  presentation.html  py-modindex.html  search.html  searchindex.js  specification.txt  valgrind.suppressions
_sources/: api.txt  changelog.txt  developing.txt  examples.txt  index.txt
bulkload/: Makefile  UInt64File.h  merge.cpp  test.sh
contrib/: init.d
design/: superfastmatch.xds
docs/: Makefile  api.rst  architecture.rst  changelog.rst  conf.py  developing.rst  diary.rst  examples.rst  index.rst  install.rst  license.rst  make.bat
public/: app.js  dev.html  index.html  lib.js
requirements/: docs.txt  examples.txt
scripts/: autoload.sh  bootstrap.sh  federal.sh  fixtures.sh  gutenberg.sh  load.sh  re2.diff
server/: .gitignore  Makefile  Makefile.am  common.h  document.cc  document.h  lunar.h  matcher.cc  matcher.h  search.lua  superfastmatch.cc  superfastmatch.h  superfastmatch.pc.in  test.lua  test.sh
server2/: .gitignore  Makefile  common.h  document.h  index.cc  index.h  job.h  load.sh  logger.h  queue.h  registry.cc  registry.h  specification.txt  superfastmatch  superfastmatch.cc  test.sh  worker.cc  worker.h
src/: api.cc  api.h  association.cc  association.h  codec.cc  codec.h  command.cc  command.h  common.h  document.cc  document.h  instrumentation.cc  instrumentation.h  (+23 more)
(+261 files in other folders)
